feat(datacenter): add token metrics display in UI feat(数据中心)：在 UI 中添加令牌指标显示

--- a/app/static/datacenter/datacenter.html
+++ b/app/static/datacenter/datacenter.html
@@ -88,6 +88,29 @@
         </div>
       </div>
 
+      <div class="grid grid-cols-2 md:grid-cols-5 gap-4">
+        <div class="stat-card">
+          <div class="stat-value" id="m-total-tokens">-</div>
+          <div class="stat-label">总 Tokens</div>
+        </div>
+        <div class="stat-card">
+          <div class="stat-value" id="m-input-tokens">-</div>
+          <div class="stat-label">输入 Tokens</div>
+        </div>
+        <div class="stat-card">
+          <div class="stat-value" id="m-output-tokens">-</div>
+          <div class="stat-label">输出 Tokens</div>
+        </div>
+        <div class="stat-card">
+          <div class="stat-value" id="m-reasoning-tokens">-</div>
+          <div class="stat-label">思考 Tokens</div>
+        </div>
+        <div class="stat-card">
+          <div class="stat-value" id="m-cached-tokens">-</div>
+          <div class="stat-label">缓存 Tokens</div>
+        </div>
+      </div>
+
       <!-- Charts -->
       <div class="grid grid-cols-1 gap-4">
         <div class="card">
